--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
 </head>
 <body>
-  <center>
-    <h1>
-      PLACEHOLDER
-    </h1>
-    <p><a href="https://prestoguys.github.io/">PrestoGuys Website</a></p>
-  </center>
+    <center>
+        <h1>
+            PLACEHOLDER
+        </h1>
+        <p>
+            <a href="https://prestoguys.github.io/">PrestoGuys Website</a>
+        </p>
+    </center>
 </body>
 </html>
